--- a/selfdrive/car/torque_data/substitute.yaml
+++ b/selfdrive/car/torque_data/substitute.yaml
@@ -68,7 +68,7 @@ SEAT LEON 3RD GEN: VOLKSWAGEN GOLF 7TH GEN
 SEAT ATECA 1ST GEN: VOLKSWAGEN GOLF 7TH GEN
 
 # Old subarus don't have much data guessing it's like low torque impreza
-SUBARU FORESTER 2017 - 2018: SUBARU IMPREZA LIMITED 2019
+SUBARU FORESTER 2017 - 2018: SUBARU OUTBACK 2018 - 2019
 SUBARU OUTBACK 2015 - 2017: SUBARU IMPREZA LIMITED 2019
 #SUBARU OUTBACK 2018 - 2019: SUBARU IMPREZA LIMITED 2019
 SUBARU LEGACY 2015 - 2017: SUBARU IMPREZA LIMITED 2019
